workshop04/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpapp-ing
  labels:
    name: wpapp-ing
spec:
  ingressClassName: nginx
  rules:
    - host: wp-167.172.7.120.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wpapp-svc
                port:
                  number: 80
